--- a/Lab1a - Create A Class/Lab1a - Create A Class/Lab1a - Create A Class.vcxproj.filters
+++ b/Lab1a - Create A Class/Lab1a - Create A Class/Lab1a - Create A Class.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Lab1 - UML.cd" />
+  </ItemGroup>
 </Project>
